fixed footer grid spacing

--- a/styles/shared_styles.css
+++ b/styles/shared_styles.css
@@ -290,6 +290,7 @@ header {
     color: #2d2d2d;
     transition: all 0.2s ease-in-out;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 .card_button:hover {
@@ -417,7 +418,6 @@ footer {
 .footer_info_grid {
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 5%;
     margin-inline: auto;
     max-width: 90%;
     margin-top: 3.5rem;
@@ -497,4 +497,13 @@ footer {
         margin-bottom: 4rem;
     }
 
+    .footer_info_grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 1000px) {
+    .footer_info_grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
